--- a/src/user/containers/Prosucts_list/Products.module.css
+++ b/src/user/containers/Prosucts_list/Products.module.css
@@ -1,7 +1,15 @@
-h1 {
-    margin-top: 10px;
+.container {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 .product {
     background-color: rgb(218, 216, 193);
+    padding: 20px;
+    
+}
+
+.box {
+    background-color: aqua;
 }
