--- a/src/user/containers/Prosucts_list/Products.module.css
+++ b/src/user/containers/Prosucts_list/Products.module.css
@@ -7,10 +7,11 @@
 .product {
     background-color: rgb(218, 216, 193);
     padding: 20px;
+
     
 }
 
-.box-1 {
+.box_1 {
     background-color: aqua;
 }
 
@@ -18,3 +19,6 @@
     padding: 10px;
 }
 
+.spinner {
+    align-items: center;
+}
